reftests: Fix test on HighContrast theme
We are testing -gtk-icon-style and assume the theme doesn't touch it.
But HighContrast forces symbolic icons. And that breaks the reference
images.

So explicitly set "requested" for everything.

--- a/testsuite/reftests/icon-style-basics.css
+++ b/testsuite/reftests/icon-style-basics.css
@@ -1,3 +1,7 @@
+* {
+  -gtk-icon-style: requested;
+}
+
 .regular {
   -gtk-icon-style: regular;
 }
